k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagship-server
spec:
  type: ClusterIP
  selector:
    app: flagship-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
